hphp/test/slow/type_annotation/type_annotation_parent2.php.expectf
Fatal error: when resolving type constant C::T, class C does not have a parent in %s on line 7
